# fish-exclamation-mark-bot

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml  res.txt  res2.txt  tune_policies.py
.github/workflows/: release.yml
docs/: bangbang_policy_explained.md  control_theory_non_rl_references.md  problem_formulation.md  solution_paths_research.md
src/: __init__.py  audio.rs  capture.rs  config.rs  control.rs  detect.rs  filter.rs  main.rs  policy.rs  sampler.rs  types.rs  ui.rs  vision.rs  vrc_window.rs
src/control/: __init__.py  baseline_policy.py  belief_space_local_opt_policy.py  policies.py  policy.py  stochastic_output_feedback_mpc_policy.py  time_optimal_bangbang_policy.py
src/gym/: __init__.py  fishing_env.py  matplotlib_viewer.py
