[package]
name = "fish-exclimation-mark-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
cpal = "0.15"
eframe = "0.31"
egui_plot = "0.31"
hound = "3"

lewton = "0.10"
ndarray = "0.16"
opencv = { version = "0.92", default-features = false, features = ["clang-runtime", "imgproc", "imgcodecs"] }
ort = { version = "=2.0.0-rc.9", default-features = false, features = ["ndarray", "load-dynamic", "cuda"] }
ort-sys = "=2.0.0-rc.9"
rustfft = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
vrchat_osc = "2.2.0"
windows-capture = "1"
windows = { version = "0.61", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
] }
