[project]
name = "fish-exclamation-mark-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "pillow>=12.1.1",
    "scikit-image>=0.26.0",
]


[dependency-groups]
dev = ["ruff>=0.9.0", "pyright>=1.1.408"]


[tool.ruff.lint]
select = ["E501"]

[tool.pyright]
typeCheckingMode = "basic"
reportMatchNotExhaustive = "error"

include = ["src"]
exclude = ["**/__pycache__", ".venv", "**/node_modules", "**/.*"]
